objects/bofc__BOFC_Picklist_ValueSet_Item__c.object
<CustomObject>
    <fields>
        <fullName>bofc__BOFC_Picklist_ValueSet__c</fullName>
        <label>BOFC Picklist ValueSet</label>
        <referenceTo>bofc__BOFC_Picklist_ValueSet__c</referenceTo>
        <relationshipLabel>BOFC Picklist ValueSet Items</relationshipLabel>
        <relationshipName>BOFC_Picklist_ValueSet_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>bofc__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>bofc__IsDefault__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsDefault</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>bofc__Picklist_Label__c</fullName>
        <label>Picklist Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bofc__Picklist_Value__c</fullName>
        <label>Picklist Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>BOFC Picklist ValueSet Item</label>
    <nameField>
        <label>BOFC Picklist ValueSet Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BOFC Picklist ValueSet Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>